# subxt-playground

./: Cargo.toml
src/: main.rs
