[package]
name = "subxt-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
hex-literal = "0.4.1"
sp-core = "35.0.0"
tokio = { version = "1.43.0", features = ["full"] }
subxt = { version= "0.38.0", default-features = true, features = ["reconnecting-rpc-client"] }
log = "0.4.25"
env_logger = "0.11.6"
tracing-subscriber = "0.3.19"

